--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
