--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.9",
     "autoprefixer": "^10.4.7",
     "next": "12.2.2",
     "react": "18.2.0",
