--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.9",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
