--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@nextui-org/react": "^1.0.0-beta.9",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "canvas-confetti": "^1.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.4.3",
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
